--- a/EDA/Untitled0.ipynb
+++ b/EDA/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXmeAUHx3aweRUAHt051EU",
+      "authorship_tag": "ABX9TyNr3/P6VV6ZJye0r00W6Lbb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,14 @@
         "id": "a1bi6BlETqT4"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "Link1 = https://raw.githubusercontent.com/Gierko/Hackathon-11th-to-13th-January/main/idf_transactions_16_17.csv\n",
+        "Link2 = https://raw.githubusercontent.com/Gierko/Hackathon-11th-to-13th-January/main/idf_transactions_18_19.csv\n",
+        "Link3 = https://raw.githubusercontent.com/Gierko/Hackathon-11th-to-13th-January/main/idf_transactions_2017.csv\n",
+        "Link4 = https://raw.githubusercontent.com/Gierko/Hackathon-11th-to-13th-January/main/info_pop_dem_communes_idf.csv\n",
+        "Link5 = https://raw.githubusercontent.com/Gierko/Hackathon-11th-to-13th-January/main/logements_info_75.csv\n",
+        "Link6 = https://raw.githubusercontent.com/Gierko/Hackathon-11th-to-13th-January/main/transactions_idf_14_15.csv"
+      ]
     }
   ]
 }
