--- a/Machine Learning/x.ipynb
+++ b/Machine Learning/x.ipynb
@@ -2,10 +2,310 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import requests , zipfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr = pd.read_csv('G:\\Mi unidad\\Hackathon--aws\\Data\\df_final', compression='zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_mutation</th>\n",
+       "      <th>valeur_fonciere</th>\n",
+       "      <th>surface_reelle_bati</th>\n",
+       "      <th>nombre_pieces_principales</th>\n",
+       "      <th>type_local</th>\n",
+       "      <th>nature_mutation</th>\n",
+       "      <th>nom_commune</th>\n",
+       "      <th>code_commune</th>\n",
+       "      <th>code_departement</th>\n",
+       "      <th>id_parcelle</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>date_mutation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-1137255</td>\n",
+       "      <td>310000.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Maison</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Gretz-Armainvilliers</td>\n",
+       "      <td>77215</td>\n",
+       "      <td>77</td>\n",
+       "      <td>772150000B0473</td>\n",
+       "      <td>2.740574</td>\n",
+       "      <td>48.739669</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-1137256</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Maison</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Saint-Fargeau-Ponthierry</td>\n",
+       "      <td>77407</td>\n",
+       "      <td>77</td>\n",
+       "      <td>77407000AD0345</td>\n",
+       "      <td>2.539824</td>\n",
+       "      <td>48.563586</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-1137256</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Maison</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Saint-Fargeau-Ponthierry</td>\n",
+       "      <td>77407</td>\n",
+       "      <td>77</td>\n",
+       "      <td>77407000AD0345</td>\n",
+       "      <td>2.539824</td>\n",
+       "      <td>48.563586</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-1137257</td>\n",
+       "      <td>250000.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Local industriel. commercial ou assimilé</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Melun</td>\n",
+       "      <td>77288</td>\n",
+       "      <td>77</td>\n",
+       "      <td>77288000AV0266</td>\n",
+       "      <td>2.656724</td>\n",
+       "      <td>48.534489</td>\n",
+       "      <td>2019-01-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-1137258</td>\n",
+       "      <td>155000.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Pontault-Combault</td>\n",
+       "      <td>77373</td>\n",
+       "      <td>77</td>\n",
+       "      <td>77373000AD0157</td>\n",
+       "      <td>2.616840</td>\n",
+       "      <td>48.805639</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706657</th>\n",
+       "      <td>2022-537268</td>\n",
+       "      <td>1905000.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>Adjudication</td>\n",
+       "      <td>Paris 15e Arrondissement</td>\n",
+       "      <td>75115</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75115000CW0050</td>\n",
+       "      <td>2.310843</td>\n",
+       "      <td>48.845591</td>\n",
+       "      <td>2022-04-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706658</th>\n",
+       "      <td>2022-537269</td>\n",
+       "      <td>270000.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Local industriel. commercial ou assimilé</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Paris 11e Arrondissement</td>\n",
+       "      <td>75111</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75111000CN0034</td>\n",
+       "      <td>2.397491</td>\n",
+       "      <td>48.850253</td>\n",
+       "      <td>2022-06-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706659</th>\n",
+       "      <td>2022-537270</td>\n",
+       "      <td>1326666.6</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Local industriel. commercial ou assimilé</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Paris 14e Arrondissement</td>\n",
+       "      <td>75114</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75114000CQ0137</td>\n",
+       "      <td>2.318175</td>\n",
+       "      <td>48.832970</td>\n",
+       "      <td>2022-06-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706660</th>\n",
+       "      <td>2022-537271</td>\n",
+       "      <td>423000.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Paris 15e Arrondissement</td>\n",
+       "      <td>75115</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75115000AC0055</td>\n",
+       "      <td>2.305379</td>\n",
+       "      <td>48.837454</td>\n",
+       "      <td>2022-06-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706661</th>\n",
+       "      <td>2022-537272</td>\n",
+       "      <td>104650.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>Vente</td>\n",
+       "      <td>Paris 11e Arrondissement</td>\n",
+       "      <td>75111</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75111000BS0234</td>\n",
+       "      <td>2.386354</td>\n",
+       "      <td>48.856079</td>\n",
+       "      <td>2022-06-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>706662 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id_mutation  valeur_fonciere  surface_reelle_bati  \\\n",
+       "0       2019-1137255         310000.0                101.0   \n",
+       "1       2019-1137256         150000.0                 72.0   \n",
+       "2       2019-1137256         150000.0                 72.0   \n",
+       "3       2019-1137257         250000.0                 44.0   \n",
+       "4       2019-1137258         155000.0                 51.0   \n",
+       "...              ...              ...                  ...   \n",
+       "706657   2022-537268        1905000.0                160.0   \n",
+       "706658   2022-537269         270000.0                 51.0   \n",
+       "706659   2022-537270        1326666.6                281.0   \n",
+       "706660   2022-537271         423000.0                 43.0   \n",
+       "706661   2022-537272         104650.0                 15.0   \n",
+       "\n",
+       "        nombre_pieces_principales                                type_local  \\\n",
+       "0                             4.0                                    Maison   \n",
+       "1                             3.0                                    Maison   \n",
+       "2                             3.0                                    Maison   \n",
+       "3                             0.0  Local industriel. commercial ou assimilé   \n",
+       "4                             2.0                               Appartement   \n",
+       "...                           ...                                       ...   \n",
+       "706657                        6.0                               Appartement   \n",
+       "706658                        0.0  Local industriel. commercial ou assimilé   \n",
+       "706659                        0.0  Local industriel. commercial ou assimilé   \n",
+       "706660                        2.0                               Appartement   \n",
+       "706661                        1.0                               Appartement   \n",
+       "\n",
+       "       nature_mutation               nom_commune  code_commune  \\\n",
+       "0                Vente      Gretz-Armainvilliers         77215   \n",
+       "1                Vente  Saint-Fargeau-Ponthierry         77407   \n",
+       "2                Vente  Saint-Fargeau-Ponthierry         77407   \n",
+       "3                Vente                     Melun         77288   \n",
+       "4                Vente         Pontault-Combault         77373   \n",
+       "...                ...                       ...           ...   \n",
+       "706657    Adjudication  Paris 15e Arrondissement         75115   \n",
+       "706658           Vente  Paris 11e Arrondissement         75111   \n",
+       "706659           Vente  Paris 14e Arrondissement         75114   \n",
+       "706660           Vente  Paris 15e Arrondissement         75115   \n",
+       "706661           Vente  Paris 11e Arrondissement         75111   \n",
+       "\n",
+       "        code_departement     id_parcelle  longitude   latitude date_mutation  \n",
+       "0                     77  772150000B0473   2.740574  48.739669    2019-01-03  \n",
+       "1                     77  77407000AD0345   2.539824  48.563586    2019-01-03  \n",
+       "2                     77  77407000AD0345   2.539824  48.563586    2019-01-03  \n",
+       "3                     77  77288000AV0266   2.656724  48.534489    2019-01-09  \n",
+       "4                     77  77373000AD0157   2.616840  48.805639    2019-01-04  \n",
+       "...                  ...             ...        ...        ...           ...  \n",
+       "706657                75  75115000CW0050   2.310843  48.845591    2022-04-14  \n",
+       "706658                75  75111000CN0034   2.397491  48.850253    2022-06-10  \n",
+       "706659                75  75114000CQ0137   2.318175  48.832970    2022-06-16  \n",
+       "706660                75  75115000AC0055   2.305379  48.837454    2022-06-21  \n",
+       "706661                75  75111000BS0234   2.386354  48.856079    2022-06-30  \n",
+       "\n",
+       "[706662 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tr"
+   ]
   }
  ],
  "metadata": {
@@ -15,8 +315,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
