--- a/EDA/F_eda.ipynb
+++ b/EDA/F_eda.ipynb
@@ -368,7 +368,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df_final.to_pickle('df_final.pkl')"
+        "# df_final.to_pickle('df_final.pkl')"
       ]
     }
   ],
