--- a/Machine Learning/ML-Neigh.ipynb
+++ b/Machine Learning/ML-Neigh.ipynb
@@ -11,6 +11,7 @@
     "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import silhouette_score\n",
     "from datetime import datetime"
    ]
   },
@@ -855,8 +856,8 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import silhouette_score\n",
-    "### Nearest Neighbor - ML model\n",
+    "\n",
+    "### Nearest Neighbor - ML model - silhouette_score\n",
     "start_time = datetime.now()\n",
     "\n",
     "# Drop NaN\n",
