--- a/Machine Learning/ML-Neigh.ipynb
+++ b/Machine Learning/ML-Neigh.ipynb
@@ -12,7 +12,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import silhouette_score\n",
-    "from datetime import datetime"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from datetime import datetime\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, MaxAbsScaler, Normalizer\n",
+    "from sklearn.neighbors import KNeighborsRegressor"
    ]
   },
   {
@@ -386,12 +392,64 @@
    ],
    "source": [
     "### Preprocessing -> Steps before training the ML model -> Get Dummies\n",
-    "\n",
     "df_dummies1 = pd.concat([df , df['type_local'].str.get_dummies()], \n",
     "          axis = 1)\n",
     "df_final = pd.concat([df_dummies1 , df_dummies1['nature_mutation'].str.get_dummies()], \n",
     "          axis = 1)\n",
     "df_final.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 824305 entries, 0 to 824304\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                                    Non-Null Count   Dtype  \n",
+      "---  ------                                    --------------   -----  \n",
+      " 0   id_mutation                               824305 non-null  object \n",
+      " 1   valeur_fonciere                           817036 non-null  float64\n",
+      " 2   surface_reelle_bati                       824305 non-null  float64\n",
+      " 3   nombre_pieces_principales                 824305 non-null  float64\n",
+      " 4   type_local                                824305 non-null  object \n",
+      " 5   nature_mutation                           824305 non-null  object \n",
+      " 6   nom_commune                               824305 non-null  object \n",
+      " 7   code_commune                              824305 non-null  int64  \n",
+      " 8   code_departement                          824305 non-null  int64  \n",
+      " 9   id_parcelle                               824305 non-null  object \n",
+      " 10  longitude                                 816141 non-null  float64\n",
+      " 11  latitude                                  816141 non-null  float64\n",
+      " 12  date_mutation                             824305 non-null  object \n",
+      " 13  Appartement                               824305 non-null  int64  \n",
+      " 14  Local industriel. commercial ou assimilé  824305 non-null  int64  \n",
+      " 15  Maison                                    824305 non-null  int64  \n",
+      " 16  Adjudication                              824305 non-null  int64  \n",
+      " 17  Echange                                   824305 non-null  int64  \n",
+      " 18  Expropriation                             824305 non-null  int64  \n",
+      " 19  Vente                                     824305 non-null  int64  \n",
+      " 20  Vente en l'état futur d'achèvement        824305 non-null  int64  \n",
+      " 21  Vente terrain à bâtir                     824305 non-null  int64  \n",
+      "dtypes: float64(5), int64(11), object(6)\n",
+      "memory usage: 138.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_final.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Neighborhood"
    ]
   },
   {
@@ -2761,35 +2819,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Montreuil', 'Paris 1er Arrondissement', 'Paris 15e Arrondissement')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# NearestNeighbors(algorithm='ball_tree', metric='cityblock', n_neighbors=3)\n",
-    "\n",
-    "def recommend_neighborhoods(current_neighborhood):\n",
-    "    distances, index1 = estimator.kneighbors(df_train[df_train['nom_commune'] == current_neighborhood][['valeur_fonciere','surface_reelle_bati','nombre_pieces_principales','longitude','latitude',\n",
-    "'Appartement','Local industriel. commercial ou assimilé','Maison','Adjudication','Echange','Expropriation','Vente',\"Vente en l'état futur d'achèvement\",\n",
-    "'Vente terrain à bâtir']])\n",
-    "    similar_neighborhoods = df_train.iloc[index1.flat]['nom_commune']\n",
-    "    similar_neighborhoods = similar_neighborhoods[similar_neighborhoods != current_neighborhood].head(3)\n",
-    "    return similar_neighborhoods.values[0], similar_neighborhoods.values[1], similar_neighborhoods.values[2]\n",
-    "recommend_neighborhoods('Paris 14e Arrondissement')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -2856,6 +2885,144 @@
     "    similar_neighborhoods = similar_neighborhoods[similar_neighborhoods != current_neighborhood].head(3)\n",
     "    return similar_neighborhoods.values[0], similar_neighborhoods.values[1], similar_neighborhoods.values[2]\n",
     "recommend_neighborhoods('Paris 14e Arrondissement')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dft =  df_final.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0786671722192962\n",
+      "mean square error:  142808171768392.62\n",
+      "r2:  -0.0786671722192962\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-232721.93186432])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define target\n",
+    "dft1 = dft[dft['nom_commune']=='Montreuil']\n",
+    "\n",
+    "X = dft1[['surface_reelle_bati','nombre_pieces_principales','Maison','Appartement']]\n",
+    "y = dft1['valeur_fonciere']\n",
+    "\n",
+    "# Train test split \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=7)\n",
+    "\n",
+    "# Model \n",
+    "model01 = LinearRegression().fit(X_train,y_train)\n",
+    "\n",
+    "print('mean square error: ',mean_squared_error(y_test, model01.predict(X_test)))\n",
+    "print('r2: ',r2_score(y_test, model01.predict(X_test)))\n",
+    "\n",
+    "def prediction_price(sqm, rooms,house,apt): \n",
+    "    user_input = {'surface_reelle_bati':[sqm],\n",
+    "                'nombre_pieces_principales': [rooms],\n",
+    "                'Maison':[house],\n",
+    "                'Appartement':[apt]}\n",
+    "    user_input_df = pd.DataFrame(user_input)\n",
+    "    price_pred = model01.predict(user_input_df)\n",
+    "    return price_pred\n",
+    "\n",
+    "prediction_price(50,2,1,0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Les Pavillons-sous-Bois' 'Créteil' 'Paris 18e Arrondissement']\n",
+      "[441992.81809258]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Main Function\n",
+    "# Drop NaN\n",
+    "dft =  df_final.dropna()\n",
+    "\n",
+    "# Characteristics for the model \n",
+    "characteristics = ['valeur_fonciere','surface_reelle_bati','nombre_pieces_principales','longitude','latitude',\n",
+    "'Appartement','Local industriel. commercial ou assimilé','Maison','Adjudication','Echange','Expropriation','Vente',\"Vente en l'état futur d'achèvement\",\n",
+    "'Vente terrain à bâtir']\n",
+    "\n",
+    "# Split the data into Train and test set\n",
+    "df_train, df_test = train_test_split(dft, test_size=0.2, random_state=7)\n",
+    "\n",
+    "# Select the model and prepare Grid Search\n",
+    "parameters = {'n_neighbors':3, \n",
+    "                'algorithm':'ball_tree', \n",
+    "                'metric': 'cityblock'\n",
+    "}\n",
+    "model = NearestNeighbors(n_neighbors = 3, algorithm = 'ball_tree', metric ='cityblock'). fit(df_train[characteristics])\n",
+    "\n",
+    "\n",
+    "def recommend_neighborhoods(current_neighborhood):\n",
+    "    distance, index1 = model.kneighbors(df_train[df_train['nom_commune'] == current_neighborhood][characteristics])\n",
+    "    similar_neighborhoods = df_train.iloc[index1.flat]['nom_commune']\n",
+    "    similar_neighborhoods = similar_neighborhoods[similar_neighborhoods != current_neighborhood].head(3)\n",
+    "    return similar_neighborhoods\n",
+    "\n",
+    "district = recommend_neighborhoods('Montreuil')\n",
+    "print(district.values)\n",
+    "\n",
+    "dft1 = dft[dft['nom_commune']== district.values[0]]\n",
+    "\n",
+    "X = dft1[['surface_reelle_bati','nombre_pieces_principales','Maison','Appartement']]\n",
+    "y = dft1['valeur_fonciere']\n",
+    "\n",
+    "# Train test split \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=7)\n",
+    "\n",
+    "# Model \n",
+    "model01 = LinearRegression().fit(X_train,y_train)\n",
+    "\n",
+    "def prediction_price(sqm, rooms,house,apt): \n",
+    "    user_input = {'surface_reelle_bati':[sqm],\n",
+    "                'nombre_pieces_principales': [rooms],\n",
+    "                'Maison':[house],\n",
+    "                'Appartement':[apt]}\n",
+    "    user_input_df = pd.DataFrame(user_input)\n",
+    "    price_pred = model01.predict(user_input_df)\n",
+    "    return price_pred\n",
+    "\n",
+    "prediction_price(150,2,0,1)\n",
+    "print(prediction_price(150,2,0,1))"
    ]
   }
  ],
