--- a/Machine Learning/ML-Neigh.ipynb
+++ b/Machine Learning/ML-Neigh.ipynb
@@ -2832,7 +2832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2850,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2858,10 +2858,9 @@
      "output_type": "stream",
      "text": [
       "['Paris 18e Arrondissement' 'Paris 16e Arrondissement' 'Neuilly-sur-Marne']\n",
-      "Price0: 539941.6206540902\n",
-      "Price1: 537359.8478084973\n",
-      "Price2: 1268809.0810344429\n",
-      "0.8439872133314026\n"
+      "For Paris 18e Arrondissement the price is: 539941.6206540902\n",
+      "For Paris 16e Arrondissement the price is: 537359.8478084973\n",
+      "For Neuilly-sur-Marne the price is: 1268809.0810344429\n"
      ]
     }
    ],
@@ -2896,14 +2895,13 @@
     "print(district.values)\n",
     "\n",
     "##Price \n",
+    "\n",
     "#Splits \n",
     "#District 1\n",
     "dft0 = df_dummies2[df_dummies2['nom_commune']== district.values[0]]\n",
     "X0 = dft0[['price_m2', 'surface_reelle_bati', 'nombre_pieces_principales', 'Appartement',\n",
     "'Local industriel. commercial ou assimilé', 'Maison', 'Adjudication',\n",
-    "'Echange', 'Expropriation', 'Vente',\n",
-    "'Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir',\n",
-    "    'code_commune_fact']]\n",
+    "'Echange', 'Expropriation', 'Vente','Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir','code_commune_fact']]\n",
     "y0 = dft0['valeur_fonciere']\n",
     "X_train0, X_test0, y_train0, y_test0 = train_test_split(X0, y0, test_size=0.2, random_state=7)\n",
     "\n",
@@ -2911,9 +2909,7 @@
     "dft01 = df_dummies2[df_dummies2['nom_commune']== district.values[1]]\n",
     "X1 = dft01[['price_m2', 'surface_reelle_bati', 'nombre_pieces_principales', 'Appartement',\n",
     "'Local industriel. commercial ou assimilé', 'Maison', 'Adjudication',\n",
-    "'Echange', 'Expropriation', 'Vente',\n",
-    "'Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir',\n",
-    "    'code_commune_fact']]\n",
+    "'Echange', 'Expropriation', 'Vente','Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir','code_commune_fact']]\n",
     "y1 = dft01['valeur_fonciere']\n",
     "X_train1, X_test1, y_train1, y_test1 = train_test_split(X1, y1, test_size=0.2, random_state=7)\n",
     "\n",
@@ -2921,15 +2917,12 @@
     "dft02 = df_dummies2[df_dummies2['nom_commune']== district.values[2]]\n",
     "X2 = dft02[['price_m2', 'surface_reelle_bati', 'nombre_pieces_principales', 'Appartement',\n",
     "'Local industriel. commercial ou assimilé', 'Maison', 'Adjudication',\n",
-    "'Echange', 'Expropriation', 'Vente',\n",
-    "'Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir',\n",
-    "    'code_commune_fact']]\n",
+    "'Echange', 'Expropriation', 'Vente','Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir','code_commune_fact']]\n",
     "y2 = dft02['valeur_fonciere']\n",
     "X_train2, X_test2, y_train2, y_test2 = train_test_split(X2, y2, test_size=0.2, random_state=7)\n",
     "\n",
     "def predict_house_price0(sqm, rooms, model, X_train0):\n",
     "    model.fit(X_train0, y_train0)\n",
-    "    score = model_lr.score(X_test0, y_test0)\n",
     "    data = {'surface_reelle_bati': sqm, 'nombre_pieces_principales': rooms}\n",
     "    df = pd.DataFrame(data, index=[0])\n",
     "\n",
@@ -2945,7 +2938,6 @@
     "\n",
     "def predict_house_price1(sqm, rooms, model, X_train1):\n",
     "    model.fit(X_train1, y_train1)\n",
-    "    score = model.score(X_test1, y_test1)\n",
     "    data = {'surface_reelle_bati': sqm, 'nombre_pieces_principales': rooms}\n",
     "    df = pd.DataFrame(data, index=[0])\n",
     "\n",
@@ -2960,12 +2952,9 @@
     "    return prediction[0]\n",
     "\n",
     "def predict_house_price2(sqm, rooms, model, X_train2):\n",
-    "\n",
     "    model.fit(X_train2, y_train2)\n",
-    "    score = model.score(X_test2, y_test2)\n",
     "    data = {'surface_reelle_bati': sqm, 'nombre_pieces_principales': rooms}\n",
     "    df = pd.DataFrame(data, index=[0])\n",
-    "\n",
     "    df = pd.get_dummies(df)\n",
     "    missing_cols = set(X_train2.columns) - set(df.columns)\n",
     "    \n",
@@ -2980,10 +2969,9 @@
     "price0 = predict_house_price0(50, 3, model_lr, X_train0)\n",
     "price1 = predict_house_price1(50, 3, model_lr, X_train1)\n",
     "price2 = predict_house_price2(50, 3, model_lr, X_train2)\n",
-    "print(f'Price0:', price0)\n",
-    "print(f'Price1:', price1)\n",
-    "print(f'Price2:', price2)\n",
-    "print(score)"
+    "print(f'For {district.values[0]} the price is:', price0)\n",
+    "print(f'For {district.values[1]} the price is:', price1)\n",
+    "print(f'For {district.values[2]} the price is:', price2)"
    ]
   }
  ],
