--- a/Machine Learning/ML-Neigh.ipynb
+++ b/Machine Learning/ML-Neigh.ipynb
@@ -2850,17 +2850,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Paris 18e Arrondissement' 'Paris 16e Arrondissement' 'Neuilly-sur-Marne']\n",
-      "For Paris 18e Arrondissement the price is: 539941.6206540902\n",
-      "For Paris 16e Arrondissement the price is: 537359.8478084973\n",
-      "For Neuilly-sur-Marne the price is: 1268809.0810344429\n"
+      "['Paris 18e Arrondissement' 'Paris 16e Arrondissement']\n",
+      "For Paris 18e Arrondissement the price is: 539941.62\n",
+      "For Paris 16e Arrondissement the price is: 537359.85\n"
      ]
     }
    ],
@@ -2888,7 +2887,7 @@
     "def recommend_neighborhoods(current_neighborhood):\n",
     "    distance, index1 = model_N.kneighbors(df_train[df_train['nom_commune'] == current_neighborhood][characteristics])\n",
     "    similar_neighborhoods = df_train.iloc[index1.flat]['nom_commune']\n",
-    "    similar_neighborhoods = similar_neighborhoods[similar_neighborhoods != current_neighborhood].head(3)\n",
+    "    similar_neighborhoods = similar_neighborhoods[similar_neighborhoods != current_neighborhood].head(2)\n",
     "    return similar_neighborhoods\n",
     "\n",
     "district = recommend_neighborhoods('Paris 1er Arrondissement')\n",
@@ -2897,29 +2896,22 @@
     "##Price \n",
     "\n",
     "#Splits \n",
+    "xcolumns = ['price_m2', 'surface_reelle_bati', 'nombre_pieces_principales', 'Appartement',\n",
+    "'Local industriel. commercial ou assimilé', 'Maison', 'Adjudication',\n",
+    "'Echange', 'Expropriation', 'Vente','Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir','code_commune_fact']\n",
+    "\n",
     "#District 1\n",
     "dft0 = df_dummies2[df_dummies2['nom_commune']== district.values[0]]\n",
-    "X0 = dft0[['price_m2', 'surface_reelle_bati', 'nombre_pieces_principales', 'Appartement',\n",
-    "'Local industriel. commercial ou assimilé', 'Maison', 'Adjudication',\n",
-    "'Echange', 'Expropriation', 'Vente','Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir','code_commune_fact']]\n",
+    "X0 = dft0[xcolumns]\n",
     "y0 = dft0['valeur_fonciere']\n",
     "X_train0, X_test0, y_train0, y_test0 = train_test_split(X0, y0, test_size=0.2, random_state=7)\n",
     "\n",
     "#District 2\n",
     "dft01 = df_dummies2[df_dummies2['nom_commune']== district.values[1]]\n",
-    "X1 = dft01[['price_m2', 'surface_reelle_bati', 'nombre_pieces_principales', 'Appartement',\n",
-    "'Local industriel. commercial ou assimilé', 'Maison', 'Adjudication',\n",
-    "'Echange', 'Expropriation', 'Vente','Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir','code_commune_fact']]\n",
+    "X1 = dft01[xcolumns]\n",
     "y1 = dft01['valeur_fonciere']\n",
     "X_train1, X_test1, y_train1, y_test1 = train_test_split(X1, y1, test_size=0.2, random_state=7)\n",
     "\n",
-    "#District 3\n",
-    "dft02 = df_dummies2[df_dummies2['nom_commune']== district.values[2]]\n",
-    "X2 = dft02[['price_m2', 'surface_reelle_bati', 'nombre_pieces_principales', 'Appartement',\n",
-    "'Local industriel. commercial ou assimilé', 'Maison', 'Adjudication',\n",
-    "'Echange', 'Expropriation', 'Vente','Vente en l\\'état futur d\\'achèvement', 'Vente terrain à bâtir','code_commune_fact']]\n",
-    "y2 = dft02['valeur_fonciere']\n",
-    "X_train2, X_test2, y_train2, y_test2 = train_test_split(X2, y2, test_size=0.2, random_state=7)\n",
     "\n",
     "def predict_house_price0(sqm, rooms, model, X_train0):\n",
     "    model.fit(X_train0, y_train0)\n",
@@ -2951,27 +2943,12 @@
     "    prediction = model.predict(df)\n",
     "    return prediction[0]\n",
     "\n",
-    "def predict_house_price2(sqm, rooms, model, X_train2):\n",
-    "    model.fit(X_train2, y_train2)\n",
-    "    data = {'surface_reelle_bati': sqm, 'nombre_pieces_principales': rooms}\n",
-    "    df = pd.DataFrame(data, index=[0])\n",
-    "    df = pd.get_dummies(df)\n",
-    "    missing_cols = set(X_train2.columns) - set(df.columns)\n",
-    "    \n",
-    "    for c in missing_cols:\n",
-    "        df[c] = X_train2[c].median()\n",
-    "    df = df[X_train2.columns]\n",
-    "   \n",
-    "    prediction = model.predict(df)\n",
-    "    return prediction[0]\n",
-    "\n",
     "model_lr = LinearRegression()\n",
     "price0 = predict_house_price0(50, 3, model_lr, X_train0)\n",
     "price1 = predict_house_price1(50, 3, model_lr, X_train1)\n",
-    "price2 = predict_house_price2(50, 3, model_lr, X_train2)\n",
-    "print(f'For {district.values[0]} the price is:', price0)\n",
-    "print(f'For {district.values[1]} the price is:', price1)\n",
-    "print(f'For {district.values[2]} the price is:', price2)"
+    "\n",
+    "print(f'For {district.values[0]} the price is:', round(price0,2))\n",
+    "print(f'For {district.values[1]} the price is:', round(price1,2))\n"
    ]
   }
  ],
